--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <div class="card">
             <img class="avatar" src="images/spiral.png">
             <div >
-                <h3>Per Harald Borgen</h3>
+                <h3>My Name</h3>
                 <p>Frontend Developer</p>
-                <h4>Oslo, Norway</h4>
+                <h4>City, Country</h4>
             </div>
         </div>
     </body>
